give more space to the social media element to avoid a bug where it was stacking on two lines, which is not need as it occupies the whole last row on its own, so i can allow it to overflow into columns

--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -54,7 +54,7 @@
 
 .social__sharing {
     grid-row: 5 / 6;
-    grid-column: 3 / 4;
+    grid-column: 1 / 4;
     align-self: end;
     justify-self: end;
 }
